Improved the running time of greedy algorithm from 1:30 to 0:40 for 15k vertices.

--- a/l1/makefile
+++ b/l1/makefile
@@ -1,5 +1,5 @@
 all:
-	ghc -O2 Main.hs -hidir bin -odir bin -o bin/tabuSearch > /dev/null 2>&1
+	ghc -O2 Main.hs -hidir bin -odir bin -o bin/tabuSearch > compilation.txt 2>&1
 
 clean:
 	rm bin/*
