--- a/l1/makefile
+++ b/l1/makefile
@@ -1,9 +1,10 @@
 all:
-	ghc -O2 Main.hs -hidir bin -odir bin -o bin/tabuSearch > compilation.txt 2>&1
+	ghc -O2 Main.hs -hidir bin -odir bin -o main > bin/compilation_log.txt 2>&1
 
 clean:
 	rm bin/*
+	rm main
 
 
 run: all
-	bin/tabuSearch
+	./main
